--- a/TimeTracking.UI.Blazor/Views/Pages/Resources.razor
+++ b/TimeTracking.UI.Blazor/Views/Pages/Resources.razor
@@ -11,7 +11,9 @@
         </Column>
         <ActionColumn>
             <Space>
-                <SpaceItem><Button Danger OnClick="()=>Edit()">Edit</Button></SpaceItem>
+                <SpaceItem>
+                    <Button OnClick="()=>Edit()">Edit</Button>
+                </SpaceItem>
             </Space>
         </ActionColumn>
     </Table>
