--- a/TimeTracking.UI.Blazor/Views/Pages/Resources.razor
+++ b/TimeTracking.UI.Blazor/Views/Pages/Resources.razor
@@ -2,21 +2,31 @@
 @using TimeTracking.UI.Blazor.Views.Components
 @using TimeTracking.Core.Models
 
-<PageLayoutDefault Title="Resources">
-    <Table TItem="Resource" DataSource="@ResourceRetrieved">
-        <Column @bind-Field="@context.Name" Sortable />
-        <Column @bind-Field="@context.EmailAddress" />
-        <Column Title="Enabled" Field="@context.Enabled">
-            <Switch @bind-Value="@context.Enabled" Disabled=true></Switch>
-        </Column>
-        <ActionColumn>
-            <Space>
-                <SpaceItem>
-                    <Button OnClick="()=>Edit()">Edit</Button>
-                </SpaceItem>
-            </Space>
-        </ActionColumn>
-    </Table>
-</PageLayoutDefault>
+<Condition Evaluation="@loading">
+    <Match>
+        <Spin Size="large" />
+    </Match>
+    <NotMatch>
+        <PageLayoutDefault Title="Resources">
+            <Table TItem="Resource" DataSource="@ResourceRetrieved">
+                <Column @bind-Field="@context.Name" Sortable />
+                <Column @bind-Field="@context.EmailAddress" />
+                <Column Title="Enabled" Field="@context.Enabled">
+                    <Switch @bind-Value="@context.Enabled" Disabled=true></Switch>
+                </Column>
+                <ActionColumn>
+                    <Space>
+                        <SpaceItem>
+                            <Button OnClick="()=>Edit()">Edit</Button>
+                        </SpaceItem>
+                    </Space>
+                </ActionColumn>
+            </Table>
+        </PageLayoutDefault>
+    </NotMatch>
+</Condition>
+
+<TimeTracking.UI.Blazor.Views.Components.Resources.AddResourceComponent/>
+
 
 
